# timelapse

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: ci.yml
modules/timelapse/: default.nix
src/: download_handler.rs  ffmpeg.rs  main.rs  status.rs
